setup base project

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,12 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDEA
+.idea
+!.idea/jsLinters/eslint.xml
+!.idea/.gitignore
+!.idea/i18nSettings.xml
+!.idea/prettier.xml
+!.idea/vcs.xml
+
