--- a/package.json
+++ b/package.json
@@ -1,22 +1,40 @@
 {
-  "name": "cms-next-tailwind",
+  "name": "joker-next-tailwind",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "test": "jest --watch",
+    "coverage": "yarn test --coverage",
+    "coverage-all": "yarn test --coverage --watchAll --collectCoverageFrom='src/components/**/*.{ts,tsx}' --collectCoverageFrom='src/views/**/*.{ts,tsx}' --collectCoverageFrom='!src/components/**/*.{types,stories,constant,test,spec}.{ts,tsx}' --collectCoverageFrom='!src/views/**/*.{types,stories,constant,test,spec}.{ts,tsx}'",
+    "typecheck": "tsc --noEmit --incremental false"
   },
   "dependencies": {
     "@types/node": "18.15.3",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "clsx": "^1.2.1",
     "eslint": "8.36.0",
     "eslint-config-next": "13.2.4",
     "next": "13.2.4",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "sass": "^1.59.3",
+    "tailwind-merge": "^1.10.0",
     "typescript": "5.0.2"
+  },
+  "devDependencies": {
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "autoprefixer": "^10.4.14",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.7"
   }
 }
